syntax = "proto2";    //指定proto版本2.x

import "NullPmd.proto";

package RealAuthPmd; 

//认证参数
message RealAuthParameter_s2c
{
	optional NullPmd.response respcmd		= 1;
	required uint64	dwauthentdisable	= 2;					//验证开启
	required uint64	dwauthrealaward		= 3;					//奖励金币
};