var protoModules = {
    CommonPmd:require('./../CommonPmd_pb'),
    DdzPmd:require('./../DdzPmd_pb'),
    GamePmd:require('./../GamePmd_pb'),
    GrowLevelPmd:require('./../GrowLevelPmd_pb'),
    LoginPmd:require('./../LoginPmd_pb'),
    MatchPmd:require('./../MatchPmd_pb'),
    MemberPmd:require('./../MemberPmd_pb'),
    NullPmd:require('./../NullPmd_pb'),
    propertyPmd:require('./../propertyPmd_pb'),
    RealAuthPmd:require('./../RealAuthPmd_pb'),
    VideoPmd:require('./../VideoPmd_pb'),
}

module.exports = protoModules